<resources>
    <string name="app_name">GithubApp</string>
    <string name="login_with_browser">LOGIN WITH BROWSER</string>
    <string name="why_use_oath">Github官方已于 November 13, 2020 删除了Authorizations API, 所以现在只支持通过浏览器OAuth登录</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="news">News</string>
    <string name="issues">Issues</string>
    <string name="my_repos">My repos</string>
    <string name="stars">Stars</string>
    <string name="repositories">Repositories</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="search">Search</string>
    <string name="trace">Trace</string>
    <string name="trending_repos">Trending repos</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="rain">Rain</string>
    <string name="rookie_android_dev">rookie android dev</string>

    <string name="created_comment_on_commit">Created comment on commit in %s</string>
    <string name="created_comment_on_issue">Created comment on issue %d in %s</string>
    <string name="created_repo">Created repository %s</string>
    <string name="forked_to">Forked %s to %s</string>
    <string name="starred_repo">Starred %s</string>
    <string name="push_to">Push to %s at %s</string>
    <string name="created_tag_at">Created tag %s at %s</string>
    <string name="created_branch_at">Created branch %s at %s</string>
    <string name="delete_tag_at">Delete tag %s at %s</string>
    <string name="delete_branch_at">Delete branch %s at %s</string>
    <string name="published_release_at">Published release %s at %s</string>
    <string name="opened_issue_at">Opened issue %d in %s</string>
    <string name="closed_issue_at">Closed issue %d in %s</string>
    <string name="reopened_issue_at">Reopened issue %d in %s</string>
    <string name="edited_issue_at">Edited issue %d in %s</string>
    <string name="assigned_issue_at">Assigned issue %d in %s</string>
    <string name="unassigned_issue_at">Unassigned issue %d in %s</string>
    <string name="labeled_issue_at">Labeled issue %d in %s</string>
    <string name="unlabeled_issue_at">Unlabeled issue %d in %s</string>
    <string name="milestoned_issue_at">Milestoned issue %d in %s</string>
    <string name="demilestoned_issue_at">Demilestoned issue %d in %s</string>
    <string name="added_member_to">Added member %s to %s</string>
    <string name="deleted_member_at">Deleted member %s at %s</string>
    <string name="edited_member_at">Edited member %s at %s</string>
    <string name="made_repo_public">Made %s public</string>
    <string name="org_blocked_user">Org %s blocked user %s</string>
    <string name="org_unblocked_user">Org %s unblocked user %s</string>
    <string name="created_pull_request_comment_at">Created pull request review comment at %s</string>
    <string name="deleted_pull_request_comment_at">Deleted pull request review comment at %s</string>
    <string name="edited_pull_request_comment_at">Edited pull request review comment at %s</string>
    <string name="submitted_pull_request_review_at">Submitted pull request review at %s</string>
    <string name="edited_pull_request_review_at">Edited pull request review at %s</string>
    <string name="dismissed_pull_request_review_at">Dismissed pull request review at %s</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repo">Repositories</string>
    <string name="gists">Gists</string>
    <string name="stargazers">Stargazers</string>
    <string name="forks">Forks</string>
    <string name="watchers">Watchers</string>
    <string name="readme">README</string>
    <string name="star">Star</string>
    <string name="branch">Branch</string>
    <string name="share">Share</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="copy_url">Copy URL</string>
    <string name="copy_clone_url">Copy clone URL</string>
    <string name="watch">Watch</string>
    <string name="fork">Fork</string>
    <string name="releases">Releases</string>
    <string name="wiki">Wiki</string>
    <string name="bookmark">Bookmark</string>
    <string name="sort">Sort</string>
    <string name="best_match">Best match</string>
    <string name="most_stars">Most stars</string>
    <string name="fewest_stars">Fewest stars</string>
    <string name="most_forks">Most forks</string>
    <string name="fewest_forks">Fewest forks</string>
    <string name="recently_updated">Recently updated</string>
    <string name="last_recently_updated">Last recently updated</string>
    <string name="most_followers">Most followers</string>
    <string name="fewest_followers">Fewest followers</string>
    <string name="most_recently_joined">Most recently joined</string>
    <string name="least_recently_joined">Least recently joined</string>
    <string name="most_repositories">Most repositories</string>
    <string name="fewest_repositories">Fewest repositories</string>
</resources>