<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_open_in_browser"
        android:title="@string/open_in_browser"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_copy_url"
        android:title="@string/copy_url"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/action_copy_clone_url"
        android:title="@string/copy_clone_url"
        app:showAsAction="never"
        android:visible="true"/>
    <item
        android:id="@+id/action_watch"
        android:title="@string/watch"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_fork"
        android:title="@string/fork"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_releases"
        android:title="@string/releases"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_wiki"
        android:title="@string/wiki"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_bookmark"
        android:title="@string/bookmark"
        app:showAsAction="never"/>
</menu>