<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/my_account"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:checkable="false"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>
    </group>

    <group
        android:id="@+id/my"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:checkable="false"
            android:icon="@drawable/ic_menu_person"
            android:title="@string/profile"/>
        <item
            android:id="@+id/nav_notifications"
            android:checkable="false"
            android:icon="@drawable/ic_menu_notifications"
            android:title="@string/notifications"/>
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/news"/>
        <item
            android:id="@+id/nav_issues"
            android:checkable="false"
            android:icon="@drawable/ic_issues"
            android:title="@string/issues"
            android:visible="true"/>
    </group>

    <group
        android:id="@+id/repositories"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_owned"
            android:icon="@drawable/ic_menu_repo"
            android:title="@string/repositories"/>
        <item
            android:id="@+id/nav_starred"
            android:icon="@drawable/ic_menu_star"
            android:title="@string/stars"/>
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_bookmark"
            android:title="@string/bookmarks"/>
    </group>

    <group
        android:id="@+id/search"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_search"
            android:checkable="false"
            android:icon="@drawable/ic_search_title"
            android:title="@string/search"/>
        <item
            android:id="@+id/nav_trace"
            android:icon="@drawable/ic_menu_trace"
            android:title="@string/trace"/>
        <item
            android:id="@+id/nav_trending"
            android:checkable="false"
            android:icon="@drawable/ic_menu_trending"
            android:title="@string/trending_repos"/>
    </group>

    <group
        android:id="@+id/setting"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/about"/>
    </group>

</menu>