<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?attr/materialCardViewElevatedStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_marginVertical="4dp"
        android:layout_marginHorizontal="8dp"
        app:contentPadding="20dp"
        style="?attr/materialCardViewElevatedStyle"
        app:cardBackgroundColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                tools:text="Rain"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:id="@+id/tv_user_name"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                tools:text="@string/rookie_android_dev"
                android:id="@+id/tv_desc"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:src="@drawable/ic_group"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    tools:text="\@CQUPT"
                    android:textStyle="bold"
                    android:id="@+id/tv_group"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground"
                tools:ignore="UseCompoundDrawables"
                android:focusable="true">
                <ImageView
                    android:src="@drawable/ic_link"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    tools:text="coldrain.ink"
                    android:id="@+id/tv_link"
                    android:textColor="?colorAccent"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/ll_followers"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_marginVertical="10dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_gravity="center"
                        android:id="@+id/tv_followers"
                        android:textStyle="bold"
                        tools:text="36"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_marginTop="5dp"
                        android:textSize="12sp"
                        android:layout_gravity="center"
                        android:text="@string/followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_following"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_marginVertical="10dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:id="@+id/tv_following"
                        android:textSize="16sp"
                        tools:text="43"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_marginTop="5dp"
                        android:textSize="12sp"
                        android:layout_gravity="center"
                        android:text="@string/following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_repo"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_marginVertical="10dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:id="@+id/tv_repositories"
                        tools:text="63"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_marginTop="5dp"
                        android:textSize="12sp"
                        android:layout_gravity="center"
                        android:text="@string/repo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_gists"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_marginVertical="10dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:id="@+id/tv_gists"
                        tools:text="0"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_marginTop="5dp"
                        android:textSize="12sp"
                        android:layout_gravity="center"
                        android:text="@string/gists"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</FrameLayout>