<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.card.MaterialCardView
            android:layout_marginVertical="4dp"
            android:layout_marginHorizontal="8dp"
            app:contentPadding="20dp"
            style="?attr/materialCardViewElevatedStyle"
            app:cardBackgroundColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    tools:text="ReactiveX/RxGo"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:id="@+id/tv_repo_name"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    tools:text="Created at Oct 14, 2016, Latest commit 18 days ago"
                    android:id="@+id/tv_time"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:id="@+id/ll_issues"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_marginVertical="10dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_gravity="center"
                            android:id="@+id/tv_issues"
                            android:textStyle="bold"
                            tools:text="42"
                            android:textSize="16sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_marginTop="5dp"
                            android:textSize="12sp"
                            android:layout_gravity="center"
                            android:text="@string/issues"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/ll_stargazers"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_marginVertical="10dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:id="@+id/tv_stargazers"
                            android:textSize="16sp"
                            tools:text="4220"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_marginTop="5dp"
                            android:textSize="12sp"
                            android:layout_gravity="center"
                            android:text="@string/stargazers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/ll_forks"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_marginVertical="10dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:id="@+id/tv_forks"
                            tools:text="309"
                            android:textSize="16sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_marginTop="5dp"
                            android:textSize="12sp"
                            android:layout_gravity="center"
                            android:text="@string/forks"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/ll_watchers"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_marginVertical="10dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:id="@+id/tv_watchers"
                            tools:text="105"
                            android:textSize="16sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_marginTop="5dp"
                            android:textSize="12sp"
                            android:layout_gravity="center"
                            android:text="@string/watchers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_readme"
            style="?attr/materialCardViewElevatedStyle"
            android:layout_marginVertical="4dp"
            android:layout_marginHorizontal="8dp"
            app:contentPadding="20dp"
            app:cardBackgroundColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/readme"
                    android:textColor="?colorAccent"
                    android:textSize="18sp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ProgressBar
                    android:id="@+id/readme_loader"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/readme_title"
                    android:layout_gravity="top"
                    android:indeterminate="true"
                    android:layout_marginBottom="5dp"
                    android:paddingHorizontal="16dp" />

                <TextView
                    android:id="@+id/tv_readme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="2dip"
                    android:textSize="16sp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.card.MaterialCardView>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>